# contact-center

./: .env.example  .gitignore  .pre-commit-config.yaml  DOCUMENTATION_SYSTEM.md  Dockerfile  Makefile  README.md  SOLUTION.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: cd.yml  ci.yml
app/: __init__.py  config.py  factory.py  logging_config.py  main.py  schemas.py  telemetry.py
app/api/v1/: router.py
app/api/v1/endpoints/: classify.py  health.py
app/config/: settings.py
app/core/: __init__.py  config.py  logging.py  logging_config.py
app/docs/: README.md  __init__.py  router.py  sidebar.yaml
app/frontend/: __init__.py
app/frontend/docs/: README.md  __init__.py  router.py  sidebar.yaml
app/frontend/qa/: __init__.py  router.py
app/frontend/templates/: docs.html  landing.html  qa_interface.html
app/middleware/: __init__.py  circuit_breaker.py  rate_limit.py
app/models/: __init__.py  requests.py
app/prompts/: __init__.py  loader.py  registry.py  template.py
app/schemas/: __init__.py  classification.py  common.py  health.py  llm_responses.py
app/services/: __init__.py  audio_utils.py  classification.py  classifier.py  dispatch.py  llm.py  llm_client.py  workflow_router.py
app/templates/: docs.html  landing.html  qa_interface.html
app/ui/: __init__.py  router.py
app/utils/: __init__.py  audio.py  pii_redaction.py
app/workflows/: __init__.py  base.py  informational.py  safety_compliance.py  service_action.py
docker/: Dockerfile  docker-compose.aws.yml  docker-compose.yml  prometheus.yml
docs/: AWS_DEPLOYMENT.md  AWS_QUICK_START.md  AWS_SETUP_SUMMARY.md  SOLUTION.md  api-reference.md  architecture.md  aws-deploy.md  aws.md  design-decisions.md  evaluation.md  frontend.md  overview.md  solution-design.md
docs/plan/: IMPLEMENTATION_PLAN.md  PLAN.md
prompts/: README.md
prompts/classification/: audio_v1.0.0.yaml  v1.0.0.yaml
scripts/: deploy-aws.ps1  deploy-aws.sh  tunnel.sh
src/orchestrator/: __init__.py  main.py
src/orchestrator/api/v1/: __init__.py  router.py
src/orchestrator/api/v1/endpoints/: classify.py  health.py
src/orchestrator/config/: __init__.py
src/orchestrator/middleware/: __init__.py
src/orchestrator/models/: __init__.py  responses.py
src/orchestrator/services/: __init__.py  classifier.py  llm_client.py
src/orchestrator/workflows/: __init__.py  informational.py  safety_compliance.py  service_action.py
terraform/: .gitignore  README.md  iam-policy.json  main.tf  outputs.tf  tfplan  variables.tf
terraform/environments/: production.tfvars  staging.tfvars
terraform/modules/alb/: main.tf  outputs.tf  variables.tf
terraform/modules/ecs/: main.tf  variables.tf
terraform/modules/ecs_service/: main.tf  outputs.tf  variables.tf
terraform/modules/iam/: main.tf  outputs.tf
terraform/modules/monitoring/: main.tf  outputs.tf  variables.tf
terraform/modules/secrets/: main.tf  outputs.tf  variables.tf
terraform/modules/security_groups/: main.tf  outputs.tf
terraform/modules/vpc/: main.tf
tests/: __init__.py  conftest.py
tests/deepeval/: __init__.py  conftest.py  test_classification_evals.py
tests/e2e/: test_classification_e2e.py
tests/integration/: test_api.py  test_docs.py
tests/load/: locustfile.py
tests/unit/: test_classifier.py  test_feedback.py  test_logging.py  test_logging_config.py  test_middleware.py  test_models.py  test_pii_redaction.py  test_workflows.py
