[project]
name = "cost-center-orchestrator"
version = "0.1.0"
description = "A scalable AI-powered customer message classifier for cost centers"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Cost Center Team" }]

dependencies = [
    "fastapi[standard]>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "openai>=1.12.0",
    "httpx>=0.26.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "websockets>=13.0",
    "markdown>=3.5.0",
    "deepeval>=1.0.0",
]

# Development dependencies
[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "ruff>=0.2.0",
    "ty>=0.0.13",
    "pre-commit>=3.6.0",
    "bandit>=1.7.0",
    "deepeval>=1.0.0",
    "locust>=2.20.0",
]

# Ruff Configuration - Linting and Formatting
# Note: IDE schema validation may show false errors for ruff config - ignore them
[tool.ruff]
target-version = "py310"
line-length = 100
src = ["app", "tests"]
fix = true
show-fixes = true

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Indent with spaces
indent-style = "space"
# Respect magic trailing commas
skip-magic-trailing-comma = false
# Auto-detect line endings
line-ending = "auto"
# Format docstrings
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate (commented-out code)
    "PL",  # Pylint
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "B008",    # do not perform function calls in argument defaults
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
]

[tool.ruff.lint.isort]
known-first-party = ["app"]
force-sort-within-sections = true
split-on-trailing-comma = false

# ty Configuration - Fast Python type checker from Astral
# ty is still in early development (v0.0.x), configuration options are minimal
# See https://docs.astral.sh/ty/ for latest documentation
[tool.ty.rules]
# Starlette/FastAPI add_middleware expects factory type; passing class is valid at runtime
invalid-argument-type = "ignore"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=app --cov-report=term-missing --cov-report=html"
markers = [
    "evaluation: DeepEval LLM evaluation tests",
]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
